compiler/weave_syntax/tests/data/Tokens.error
error: Unexpected tokens
        --> <source>:32:1
         |
      32 | and
         | ^^^
      33 | and_eq
         | ^^^^^^
      34 | or
         | ^^
     ... |
      40 | bit_and
         | ^^^^^^^
      41 | bit_or
         | ^^^^^^
      42 | bit_compl
         | ^^^^^^^^^
error: Unexpected tokens
        --> <source>:50:1
         |
      50 | abstract
         | ^^^^^^^^
      51 | add
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:53:1
         |
      53 | addrspace
         | ^^^^^^^^^
error: Unexpected tokens
        --> <source>:53:1
         |
      53 | addrspace
         | ^^^^^^^^^
      54 | alias
         | ^^^^^
      55 | align
         | ^^^^^
      56 | alignas
         | ^^^^^^^
error: Expected '('
        --> <source>:58:1
         |
      58 | array
         | ^^^^^
error: Expected '[token:identifier]'
        --> <source>:58:1
         |
      58 | array
         | ^^^^^
error: Expected ')'
        --> <source>:58:1
         |
      58 | array
         | ^^^^^
error: Unexpected tokens
        --> <source>:58:1
         |
      58 | array
         | ^^^^^
      59 | as
         | ^^
      60 | assembly
         | ^^^^^^^^
     ... |
      80 | class
         | ^^^^^
      81 | columnmajor
         | ^^^^^^^^^^^
      82 | compile
         | ^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:84:1
         |
      84 | const
         | ^^^^^
error: Expected '{'
        --> <source>:84:1
         |
      84 | const
         | ^^^^^
error: Unexpected tokens
        --> <source>:84:1
         |
      84 | const
         | ^^^^^
error: Unexpected tokens
        --> <source>:86:1
         |
      86 | continue
         | ^^^^^^^^
      87 | contravariant
         | ^^^^^^^^^^^^^
      88 | covariant
         | ^^^^^^^^^
     ... |
      92 | delegate
         | ^^^^^^^^
      93 | delete
         | ^^^^^^
      94 | deprecated
         | ^^^^^^^^^^
error: Unexpected tokens
        --> <source>:96:1
         |
      96 | discard
         | ^^^^^^^
      97 | do
         | ^^
      98 | drop
         | ^^^^
      99 | dynamic
         | ^^^^^^^
     100 | eager
         | ^^^^^
error: Expected 'if'
        --> <source>:101:1
         |
     101 | else
         | ^^^^
error: Expected '{'
        --> <source>:102:1
         |
     102 | enum
         | ^^^^
error: Unexpected tokens
        --> <source>:102:1
         |
     102 | enum
         | ^^^^
     103 | event
         | ^^^^^
     104 | except
         | ^^^^^^
     ... |
     107 | expression
         | ^^^^^^^^^^
     108 | extension
         | ^^^^^^^^^
     109 | extern
         | ^^^^^^
error: Unexpected tokens
        --> <source>:111:1
         |
     111 | field
         | ^^^^^
     112 | file
         | ^^^^
     113 | final
         | ^^^^^
     ... |
     120 | fragment
         | ^^^^^^^^
     121 | friend
         | ^^^^^^
     122 | from
         | ^^^^
error: Expected '[token:identifier]'
        --> <source>:124:1
         |
     124 | generic
         | ^^^^^^^
error: Unexpected tokens
        --> <source>:124:1
         |
     124 | generic
         | ^^^^^^^
     125 | get
         | ^^^
     126 | global
         | ^^^^^^
     ... |
     270 | *
         | ^
     271 | /=
         | ^^
     272 | /
         | ^
error: Expected '[token:identifier]'
        --> <source>:277:1
         |
     277 | [
         | ^
error: Unexpected tokens
        --> <source>:279:1
         |
     279 | ::
         | ^^
     280 | :
         | ^
error: Unexpected tokens
        --> <source>:282:1
         |
     282 | @
         | ^
     283 | $
         | ^
     284 | %=
         | ^^
     ... |
     311 | ...
         | ^^^
     312 | ..
         | ^^
     313 | .
         | ^
error: Expected '}'
        --> <source>:321:1
         |
     321 | 
         | ^
error: Expected '}'
        --> <source>:321:1
         |
     321 | 
         | ^
